--- a/que/build.gradle
+++ b/que/build.gradle
@@ -13,6 +13,7 @@ repositories {
 }
 
 dependencies {
+	runtimeOnly 'com.h2database:h2'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'mysql:mysql-connector-java'
