--- a/que/build.gradle
+++ b/que/build.gradle
@@ -13,6 +13,9 @@ repositories {
 }
 
 dependencies {
+
+// https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring5
+	compile group: 'org.thymeleaf', name: 'thymeleaf-spring5'
 	runtimeOnly 'com.h2database:h2'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
