--- a/que/src/main/resources/application.properties
+++ b/que/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:h2:mem:real_estate
+spring.datasource.url=jdbc:h2:mem:que_db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
