--- a/que/src/main/resources/application.properties
+++ b/que/src/main/resources/application.properties
@@ -4,8 +4,9 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
 spring.jackson.serialization.indent_output=true
+#spring.devtools.livereload.enabled  = false
