--- a/que/build.gradle
+++ b/que/build.gradle
@@ -13,7 +13,8 @@ repositories {
 }
 
 dependencies {
-
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
 // https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring5
     // https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity5
     compile group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity5', version: '3.0.4.RELEASE'
